# caracal

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  felt252_overflow_felt252_overflow_Felt252Overflow_bad_add.dot  felt252_overflow_felt252_overflow_Felt252Overflow_bad_add_controlled.dot  felt252_overflow_felt252_overflow_Felt252Overflow_bad_add_uncontrolled.dot  felt252_overflow_felt252_overflow_Felt252Overflow_bad_mul_controlled.dot  felt252_overflow_felt252_overflow_Felt252Overflow_bad_sub_controlled.dot  felt252_overflow_felt252_overflow_Felt252Overflow_bad_sub_uncontrolled.dot  felt252_overflow_felt252_overflow_Felt252Overflow_test.dot  felt252_overflow_felt252_overflow_Felt252Overflow_test_assert.dot
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  false_negative.yml  false_positive.yml  feature_request.yml
.github/workflows/: check.yml  ci.yml  release.yml  test.yml
examples/: unused_return.cairo
src/: lib.rs  main.rs
src/analysis/: dataflow.rs  instructions.rs  mod.rs  reentrancy.rs  taint.rs  traversal.rs
src/cli/: mod.rs
src/cli/commands/: mod.rs
src/cli/commands/detect/: mod.rs
src/cli/commands/detectors/: mod.rs
src/cli/commands/print/: mod.rs
src/cli/commands/printers/: mod.rs
src/compilation/: cairo_project.rs  mod.rs  scarb.rs  standard.rs
src/compilation/utils/: felt252_serde.rs  felt252_vec_compression.rs  mod.rs  replacer.rs
src/core/: basic_block.rs  cfg.rs  compilation_unit.rs  core_unit.rs  function.rs  instruction.rs  mod.rs
src/core/snapshots/: starknet_static_analysis__core__core_unit__detectors@controlled_library_call.cairo.snap  starknet_static_analysis__core__core_unit__detectors@unused_events.cairo.snap
src/detectors/: array_use_after_pop_front.rs  controlled_library_call.rs  dead_code.rs  detector.rs  felt252_overflow.rs  mod.rs  read_only_reentrancy.rs  reentrancy.rs  reentrancy_benign.rs  reentrancy_events.rs  tx_origin.rs  unchecked_l1_handler_from.rs  unenforced_view.rs  unused_arguments.rs  unused_events.rs  unused_return.rs  use_after_pop_front.rs
src/printers/: callgraph.rs  cfg.rs  cfg_optimized.rs  mod.rs  printer.rs
src/utils/: mod.rs
tests/: integration_tests.rs
tests/detectors/: array_use_after_pop_front.cairo  controlled_library_call.cairo  dead_code.cairo  felt252_overflow.cairo  read_only_reentrancy.cairo  reentrancy.cairo  reentrancy_benign.cairo  reentrancy_events.cairo  test.cairo  tx_origin.cairo  unchecked_l1_handler_from.cairo  unenforced_view.cairo  unused_arguments.cairo  unused_events.cairo  unused_result.cairo  unused_return.cairo  use_after_pop_front.cairo
tests/snapshots/: integration_tests__detectors@array_use_after_pop_front.cairo.snap  integration_tests__detectors@controlled_library_call.cairo.snap  integration_tests__detectors@dead_code.cairo.snap  integration_tests__detectors@felt252_overflow.cairo.snap  integration_tests__detectors@felt252_overflow.cairo.snap.new  integration_tests__detectors@read_only_reentrancy.cairo.snap  integration_tests__detectors@reentrancy.cairo.snap  integration_tests__detectors@reentrancy_benign.cairo.snap  integration_tests__detectors@reentrancy_events.cairo.snap  integration_tests__detectors@tx_origin.cairo.snap  integration_tests__detectors@unchecked_l1_handler_from.cairo.snap  integration_tests__detectors@unenforced_view.cairo.snap  integration_tests__detectors@unenforced_view.cairo.snap.new  integration_tests__detectors@unused_arguments.cairo.snap  integration_tests__detectors@unused_events.cairo.snap  integration_tests__detectors@unused_result.cairo.snap  integration_tests__detectors@unused_return.cairo.snap  integration_tests__detectors@use_after_pop_front.cairo.snap
