[package]
name = "caracal"
description = "Starknet smart contract static analysis tool"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4.1"
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
once_cell =  "1.17"
smol_str = "0.2"
num-integer = "0.1"
termcolor = "1.2"
graphviz-rust = "0.6.2"

cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo.git", tag = "v1.1.1" }

[dev-dependencies]
insta = { version = "1.30", features = ["glob"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
