[package]
name = "caracal"
description = "Starknet smart contract static analysis tool"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
once_cell =  "1.17"
smol_str = "0.2"
num-integer = "0.1"
termcolor = "1.2"
graphviz-rust = "0.6.2"
cairo-felt = "0.8.7"
thiserror = "1.0.47"
rayon = "1.8"
fxhash = "0.2.1"

cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo.git", tag = "v2.4.3" }


[dev-dependencies]
insta = { version = "1.30", features = ["glob"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
